package model;

public enum TipoDVD {
    NORMAL,
    LANCAMENTO,
    INFANTIL
}
